--- a/proyectos/FOTOS WEB/21 COFFE AGREEMENT _ GOODNEWS/21.html
+++ b/proyectos/FOTOS WEB/21 COFFE AGREEMENT _ GOODNEWS/21.html
@@ -16,7 +16,7 @@
       </div>
       <nav>
         <ul class="d-flex gap-4 text-4xl font-thin text-red-600">
-          <a href="home.html" class="text-decoration-none text-red-600">Work</a>
+          <a href="index.html" class="text-decoration-none text-red-600">Work</a>
           <a href="about.html" class="text-decoration-none text-red-600">About</a>
           <a href="mailto:pedrotrivinofabro@gmail.com" class="text-decoration-none text-red-600">Contact</a>
         </ul>
