--- a/01.html
+++ b/01.html
@@ -53,16 +53,16 @@
         allowfullscreen></iframe>
     </div>
 
-    <main class="flex-grow">
-      <section class="my-8">
-        <h2 class="text-4xl mb-4">MOISES NIESTO x WALLAPOP / NO NUEVA COLLECCION</h2>
-        <h4>Production and Direction for Wallapop</h4>
-        <p class="text-black mb-4">
+    <main>
+      <section>
+        <h2 class="h2-h2">MOISES NIESTO x WALLAPOP / NO NUEVA COLLECCION</h2>
+        <h4 class="h2-h2">Production and Direction for Wallapop</h4>
+        <p class="p-p">
           In collaboration with Wallapop and Moises Nieto, this project challenges the concept of disposable 
           fashion and promotes reuse and responsible consumption. Through Wallapop, we created a cam
           paign to present the No New Collection by Moises Nieto.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           But at the moment when Moises Nieto was about to unveil his collection, we set out to hack it, trans
           forming it into something even more impactful. We invite consumers to rethink their relationship with 
           fashion, encouraging the purchase of second-hand objects and appreciation for sustainable design.
@@ -70,7 +70,7 @@
 
         <!-- Contenedor para las imágenes -->
         <div >
-          <h2>Galería con Efecto Deslizante</h2>
+          <h2 class="h2-h2">Galería con Efecto Deslizante</h2>
           <div class="custom-image-grid">
             <!-- Imagen 1 con hueco blanco a la izquierda -->
             <div class="image-container">
@@ -129,7 +129,7 @@
 
         
       </section>
-      <div><p class="text-black">
+      <div><p class="p-p">
         This initiative goes beyond traditional fashion campaigns by merging creativity with a powerful social message. Through bold visuals and innovative storytelling, we sought to spark conversations about the environmental impact of the fashion industry. The collaboration with Moises Nieto highlights the beauty and potential of repurposed materials, inspiring a shift towards a more conscious and sustainable way of living.
       </p></div>
 
@@ -138,7 +138,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Credits:</h3>
+        <h3 class="p-p">Credits:</h3>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Produced by: @kinkifactory</p>
