--- a/19.html
+++ b/19.html
@@ -28,12 +28,12 @@
 
     <main class="flex-grow">
       <section class="my-8">
-        <h2 class="text-4xl mb-4">BORN YESTERDAY / ARCA SIA</h2>
-        <h4>Directed and produced for Arca</h4>
-        <p class="text-black mb-4">
+        <h2 class="h2-h2">BORN YESTERDAY / ARCA SIA</h2>
+        <h4 class="h2-h2">Directed and produced for Arca</h4>
+        <p class="p-p">
           Arca ft. Sia - Born Yesterday
         </p>
-        <p class="text-black">
+        <p class="p-p">
           Raw piece surged with emotion about heartbreak , we are forced to take strength from the deepest
           part of our hearts to keep moving forward
         </p>
@@ -59,7 +59,7 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Creditos:</h3>
+        <h3 class="h2-h2">Creditos:</h3>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>Direction and production: @kinkifactory</p>
@@ -83,7 +83,7 @@
           </div>
         </div>
       
-        <h3 class="text-2xl mt-4 mb-4">Thanks to:</h3>
+        <h3 class="h2-h2">Thanks to:</h3>
         <div class="credits-grid text-black">
           <div class="credit-column">
             <p>@dani17_alegria</p>
