--- a/footer.html
+++ b/footer.html
@@ -2,12 +2,12 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 
-<footer class="h-40 p-4 text-red-600">
-    <div class="OTNeueMontreal-ThinUltraSqueezed">Contact:</div>
-    <div class="ThinUltraSqueezed">pedrotrivinofabro@gmail.com</div>
-    <div class="ThinSemiSqueezed">(+34) 679423753</div>
-    <div class="ThinSemiSqueezed">Check:</div>
-    <div class="OTNeueMontreal-ThinUltraSqueezed">(IG) (VMO) (LI)</div>
-    <div class="SemiBoldSemiSqueezed">MAD/BCN/CDMX</div>
+<footer>
+    <div class="foot1">Contact:</div>
+    <div class="foot2">pedrotrivinofabro@gmail.com</div>
+    <div class="foot2">(+34) 679423753</div>
+    <div class="foot2">Check:</div>
+    <div class="foot2">(IG) (VMO) (LI)</div>
+    <div class="foot2">MAD/BCN/CDMX</div>
 </footer>
   
