--- a/header.html
+++ b/header.html
@@ -1,27 +1,15 @@
-<head>
-  <style>
-   
-
-    .header-font {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif, sans-serif; /* Tipografía para el encabezado */
-    }
-
-    
-  </style>
-</head>
-<header class="header-font h-20 p-1 d-flex justify-content-between align-items-center">
-  <div>
-    <img src="../images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo h-20">
-    <img src="../images/LOGO_Mesa de trabajo 1 copia.png" alt="Pedro Trivino Logo" class="logo h-20">
+<header>
+  <div class="header-logo-images">
+    <img src="images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo">
+    <img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="Pedro Trivino Logo" class="logo">
   </div>
-  <nav>
-    <ul>
-      <a href="index.html">Work</a>
-      <a href="about.html">About</a>
-      <a href="mailto:pedrotrivinofabro@gmail.com">Contact</a>
-    </ul>
-  </nav>
+  <div class="header-font h-20">
+    <a href="index.html">WORK</a>
+    <a href="about.html">ABOUT</a>
+    <a href="mailto:pedrotrivinofabro@gmail.com">CONTACT</a>
+  </div>
 </header>
+
 
 
 
