--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio de Pedro Trivino</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="button">
 
@@ -21,9 +21,9 @@
         <!-- Galería de 12 imágenes con sus audios -->
         <div class="gallery-item">
           <a href="01.html">
-            <img src="/gifs/01-PIXEL GIFF.gif" alt="Portfolio Image 1" id="gif1">
+            <img src="gifs/01-PIXEL GIFF.gif" alt="Portfolio Image 1" id="gif1">
             <audio id="audio1" preload="auto">
-              <source src="/gifs/01-bird-pajaro-61928.mp3" type="audio/mp3">
+              <source src="gifs/01-bird-pajaro-61928.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </a>
@@ -31,9 +31,9 @@
 
         <div class="gallery-item">
           <a href="02.html">
-            <img src="/gifs/02-PIXEL KARONT.gif" alt="Portfolio Image 2" id="gif2">
+            <img src="gifs/02-PIXEL KARONT.gif" alt="Portfolio Image 2" id="gif2">
             <audio id="audio2" preload="auto">
-              <source src="/gifs/02-cardinal-37075.mp3" type="audio/mp3">
+              <source src="gifs/02-cardinal-37075.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </a>
@@ -269,8 +269,8 @@
 
 
     const items = [
-      { imgId: 'gif1', pixelSrc: '/gifs/01-PIXEL GIFF.gif', textSrc: '/gifs/01-NO PIXEL WALLAPOP.gif', audioId: 'audio1' },
-      { imgId: 'gif2', pixelSrc: '/gifs/02-PIXEL KARONT.gif', textSrc: '/gifs/02-NO PIXEL KARONT.gif', audioId: 'audio2' },
+      { imgId: 'gif1', pixelSrc: 'gifs/01-PIXEL GIFF.gif', textSrc: 'gifs/01-NO PIXEL WALLAPOP.gif', audioId: 'audio1' },
+      { imgId: 'gif2', pixelSrc: 'gifs/02-PIXEL KARONT.gif', textSrc: 'gifs/02-NO PIXEL KARONT.gif', audioId: 'audio2' },
       { imgId: 'gif3', pixelSrc: '/gifs/03-PIXEL XCELIRATE.gif', textSrc: '/gifs/03-NO PIXEL XCELIRATE.gif', audioId: 'audio3' },
       { imgId: 'gif4', pixelSrc: '/gifs/04-PIXEL CAN PIZZA.gif', textSrc: '/gifs/04-NO PIXEL CAN PIZZA.gif', audioId: 'audio4' },
       { imgId: 'gif5', pixelSrc: '/gifs/05-PIXEL HONOR.gif', textSrc: '/gifs/05-NO PIXEL HONOR.gif', audioId: 'audio5' },
