--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="button">
+<body>
 
   <div class="h-screen d-flex flex-column">
     
@@ -201,9 +201,9 @@
 
         <div class="gallery-item">
           <a href="19.html">
-            <img src="/gifs/19-PIXEL ARCA.gif" alt="Portfolio Image 19" id="gif19">
+            <img src="gifs/19-PIXEL ARCA.gif" alt="Portfolio Image 19" id="gif19">
             <audio id="audio19" preload="auto">
-              <source src="/gifs/19-rooster-cry-173621.mp3" type="audio/mp3">
+              <source src="gifs/19-rooster-cry-173621.mp3" type="audio/mp3">
               Your browser does not support the audio element.
             </audio>
           </a>
@@ -287,7 +287,7 @@
       { imgId: 'gif16', pixelSrc: '/gifs/16-PIXEL LOTTERY.gif', textSrc: '/gifs/16-NO PIXEL LOTTERY.gif', audioId: 'audio16' },
       { imgId: 'gif17', pixelSrc: '/gifs/17-PIXEL MARKET.gif', textSrc: '/gifs/17-NO PIXEL MARKET.gif', audioId: 'audio17' },
       { imgId: 'gif18', pixelSrc: '/gifs/18-NoNuevaColeccin_Wallapop_Aftermovie-low (1).gif', textSrc: '/gifs/18-NOPIXEL BMW.gif', audioId: 'audio18' },
-      { imgId: 'gif19', pixelSrc: '/gifs/19-PIXEL ARCA.gif', textSrc: '/gifs/19-NO PIXEL ARCA.gif', audioId: 'audio19' },
+      { imgId: 'gif19', pixelSrc: 'gifs/19-PIXEL ARCA.gif', textSrc: 'gifs/19-NO PIXEL ARCA.gif', audioId: 'audio19' },
       { imgId: 'gif20', pixelSrc: '/gifs/20-PIXEL CIUTAT.gif', textSrc: '/gifs/20-NO PIXEL CIUTAT.gif', audioId: 'audio20' },
       { imgId: 'gif21', pixelSrc: '/gifs/21-PIXEL YALLO.gif', textSrc: '/gifs/21-NO PIXEL YALLO.gif', audioId: 'audio21' },
       { imgId: 'gif22', pixelSrc: '/gifs/22-PIXEL 4 CATAS.gif', textSrc: '/gifs/22-NO PIXEL 4 CATAS.gif', audioId: 'audio22' },
