--- a/01.html
+++ b/01.html
@@ -75,8 +75,8 @@
             <!-- Imagen 1 con hueco blanco a la izquierda -->
             <div class="image-container">
               <div class="image-item">
-                <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0013-4.jpg" alt="Imagen 1">
-                <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0012-4.jpg" alt="Imagen 2" class="image-hover">
+                <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0013-4.jpg" alt="Imagen 1">
+                <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0012-4.jpg" alt="Imagen 2" class="image-hover">
                 
               </div>
             </div>
@@ -90,8 +90,8 @@
             <!-- Imagen 2 con efecto hover -->
             <div class="image-container">
               <div class="image-item">
-                <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/Moises-LandingG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 3">
-                <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0025-4.jpg" alt="Imagen 4" class="image-hover">
+                <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/Moises-LandingG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 3">
+                <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/30_05_2024_0025-4.jpg" alt="Imagen 4" class="image-hover">
               </div>
             </div>
         </div>
@@ -103,11 +103,11 @@
     <div class="custom-image-grid-v">
       <div class="image-container-v">
         <div class="image-item-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/BolsodestapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SofadestapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vajilladestapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vinilodetapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SilladestapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/BolsodestapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SofadestapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vajilladestapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vinilodetapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SilladestapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 6" class="image-hover-v">
         </div>
       </div>
 
@@ -116,10 +116,10 @@
 
       <div class="image-container-v">
         <div class="image-item-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/BolsotapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 7">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SofatapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vajillatapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
-          <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vinilotapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/BolsotapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 7">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/SofatapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vajillatapadaG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
+          <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/DOBLE GALERIA/vinilotapadoG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 8" class="image-hover-v">
           
         </div>
       </div>
@@ -134,7 +134,7 @@
       </p></div>
 
       <div class="image-container-work-final">
-        <img src="../proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/Moises-LandingG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 1" class="w-100 h-100">
+        <img src="proyectos/FOTOS WEB/01 MOISES NIESTO x WALLAPOP _ NO NUEVA COLLECCION/Moises-LandingG-gigapixel-art-scale-0_50x.JPG" alt="Imagen 1" class="w-100 h-100">
       </div>
 
       <section class="my-8">
