--- a/19.html
+++ b/19.html
@@ -41,19 +41,19 @@
         <div class="custom-slider">
           
           <div class="slide horizontal active">
-            <img src="../proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_01_32_19.Imagen-fija016.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_01_32_19.Imagen-fija016.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_02_03_08.Imagen-fija022.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_02_03_08.Imagen-fija022.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_02_07_04.Imagen-fija023.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_02_07_04.Imagen-fija023.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_03_14_21.Imagen-fija039.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/ARCA_BORNYESTERDAY_FINAL_PRORES.00_03_14_21.Imagen-fija039.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/web.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/19 BORN YESTERDAY _ ARCA SIA/web.png" alt="Imagen Horizontal">
           </div>
           
       </div>
