--- a/11.html
+++ b/11.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -40,7 +40,7 @@
         <!-- Contenedor para las imágenes -->
         <div class="custom-image-grid">
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/11 LEMON SODA/L1004940r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1004940r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -50,11 +50,11 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/11 LEMON SODA/L1004949r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1004949r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 4" class="w-100 h-100">
           </div>
 
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/11 LEMON SODA/L1005046r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1005046r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -64,7 +64,7 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/11 LEMON SODA/L1005077r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1005077r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 4" class="w-100 h-100">
           </div>
 
           
@@ -75,7 +75,7 @@
       </p></div>
 
       <div class="image-container-work-final">
-        <img src="../proyectos/FOTOS WEB/11 LEMON SODA/L1005050r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
+        <img src="proyectos/FOTOS WEB/11 LEMON SODA/L1005050r-gigapixel-art-scale-0_20x.JPG" alt="Imagen 1" class="w-100 h-100">
       </div>
       
       <section class="my-8">
