--- a/16.html
+++ b/16.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -43,34 +43,34 @@
         <div class="custom-slider">
           
           <div class="slide horizontal active">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/loteriamenu.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/loteriamenu.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_03_10.Imagen-fija008.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_03_10.Imagen-fija008.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_09_22.Imagen-fija002.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_09_22.Imagen-fija002.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_12_09.Imagen-fija003.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_12_09.Imagen-fija003.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_19_19.Imagen-fija004.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_19_19.Imagen-fija004.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_25_02.Imagen-fija005.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_25_02.Imagen-fija005.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_28_08.Imagen-fija006.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_28_08.Imagen-fija006.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_42_09.Imagen-fija007.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/SSSTUFFF-H264-NAVIDAD00000000.00_00_42_09.Imagen-fija007.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/ssstufff-lt.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/ssstufff-lt.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/ssstuffflt_1.2.1.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/29 SSSTUFF LOTTERY/ssstuffflt_1.2.1.png" alt="Imagen Horizontal">
           </div>
           
 
