--- a/20.html
+++ b/20.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -46,49 +46,49 @@
         <div class="custom-slider">
           
           <div class="slide horizontal active">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00005_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00005_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00006_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00006_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00040_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00040_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00043_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00043_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00046_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00046_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00049_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00049_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00053_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00053_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00056_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00056_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00060_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00060_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00066_Output.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00066_Output.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/guim-nueva-01.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/guim-nueva-01.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00031_Output.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00031_Output.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00034_Output.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00034_Output.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00049_Output.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00049_Output.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00056_Output.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/20 TECHO _CIUTAT ft CHICO BLANCO/202209_Barcelona_CiutatTecho_00056_Output.jpg" alt="Imagen Vertical">
           </div>
           
       </div>
