--- a/02.html
+++ b/02.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -39,41 +39,41 @@
 
         <div class="custom-slider">
           <div class="slide vertical active">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8683-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8683-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide">
-              <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/000016-2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/000016-2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/10-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/10-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/13-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/13-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/14-gigapixel-art-scale-0_50x.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/14-gigapixel-art-scale-0_50x.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/2-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/4-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/4-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-              <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/6-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/6-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/8-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8478-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A8478-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A9267-1-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/8P2A9267-1-gigapixel-art-scale-0_50x.jpg" alt="Imagen Horizontal">
           </div>
 
           <div class="slide vertical">
-              <img src="../proyectos/FOTOS WEB/02 ECLIPSE KARONT/000020-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
+              <img src="proyectos/FOTOS WEB/02 ECLIPSE KARONT/000020-gigapixel-art-scale-0_50x.jpg" alt="Imagen Vertical">
           </div>
       </div>
       
