--- a/04.html
+++ b/04.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -42,31 +42,31 @@
         <div class="custom-slider">
           
           <div class="slide active">
-              <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_22_09.Still003.png" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_22_09.Still003.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_34_05.Still004.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_34_05.Still004.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_51_16.Still005.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_00_51_16.Still005.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_01_18.Still007.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_01_18.Still007.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_23_16.Still010.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_23_16.Still010.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_26_24.Still009.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_26_24.Still009.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-              <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_39_01.Still011.png" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_39_01.Still011.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_59_06.Still013.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_01_59_06.Still013.png" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_02_04_14.Still014.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/04 RISPETTA LA PIZZA _ CAN PIZZA/CAN-PIZZA-V5-PRORES-4444XQ-Copy-01.00_02_04_14.Still014.png" alt="Imagen Horizontal">
           </div>
           
       </div>
