--- a/05.html
+++ b/05.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -77,22 +77,22 @@
         <div class="custom-slider">
           
           <div class="slide active">
-              <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/A005C001_240207_RNKA0.jpeg" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/A005C001_240207_RNKA0.jpeg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_422.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_422.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_533.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_Boxeo_533.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_045.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_045.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_101.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_101.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide">
-            <img src="../proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_122-2.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/05 MAGIC PRO _ HONOR/Honor_Blua_City_122-2.jpg" alt="Imagen Horizontal">
           </div>
           
       </div>
