--- a/06.html
+++ b/06.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="tyles.css">
 
 </head>
 <body>
@@ -42,7 +42,7 @@
         <!-- Contenedor para las imágenes -->
         <div class="custom-image-grid">
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.23020124.png" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.23020124.png" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -51,10 +51,10 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.12020124.png" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.12020124.png" alt="Imagen 4" class="w-100 h-100">
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.13020124.png" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.13020124.png" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -63,7 +63,7 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4113.jpg" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/LunaKi_KinkiFactory_FelipeHernandez_DSCF4113.jpg" alt="Imagen 4" class="w-100 h-100">
           </div>
         </div>
       </section>
@@ -73,7 +73,7 @@
       </p></div>
 
       <div class="image-container-work-final">
-        <img src="../proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.11020124.png" alt="Imagen 1" class="w-100 h-100">
+        <img src="proyectos/FOTOS WEB/06 CUATRO BODAS _ LUNA KI/lunaki_1.1.11020124.png" alt="Imagen 1" class="w-100 h-100">
       </div>
       
       <section class="my-8">
