--- a/07.html
+++ b/07.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -41,7 +41,7 @@
         <!-- Contenedor para las imágenes -->
         <div class="custom-image-grid">
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104114.png" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104114.png" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -50,10 +50,10 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104225.png" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104225.png" alt="Imagen 4" class="w-100 h-100">
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104325.png" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104325.png" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -62,7 +62,7 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen 4" class="w-100 h-100">
           </div>
         </div>
       </section>
@@ -72,7 +72,7 @@
       </p></div> -->
 
       <div class="image-container-work-final">
-        <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104253.png" alt="Imagen 1" class="w-100 h-100">
+        <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104253.png" alt="Imagen 1" class="w-100 h-100">
       </div>
       
       <section class="my-8">
