--- a/08.html
+++ b/08.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -40,7 +40,7 @@
         <!-- Contenedor para las imágenes -->
         <div class="custom-image-grid">
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/02.2.gif" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/02.2.gif" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
@@ -49,17 +49,17 @@
             <!-- <img src="images/DSC_0994.JPG" alt="Imagen 3" class="w-100 h-100"> -->
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/03.2.gif" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/03.2.gif" alt="Imagen 4" class="w-100 h-100">
           </div>
           <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/04.2.gif" alt="Imagen 1" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/04.2.gif" alt="Imagen 1" class="w-100 h-100">
           </div>
           <div class="image-container">
             <!-- <img src="images/DSC_0008.JPG" alt="Imagen 2" class="w-100 h-100"> -->
           </div>
           
           <!-- <div class="image-container">
-            <img src="../proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen 4" class="w-100 h-100">
+            <img src="proyectos/FOTOS WEB/07 NUDE PROJECT & 545/Captura-de-pantalla-2024-01-16-104640.png" alt="Imagen 4" class="w-100 h-100">
           </div>
         </div> -->
       </section>
@@ -69,7 +69,7 @@
       </p></div> -->
 
       <div class="image-container-work-final">
-        <img src="../proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/Captura-de-pantalla-2023-10-24-113039.png" alt="Imagen 1" class="w-100 h-100">
+        <img src="proyectos/FOTOS WEB/08 TAZAS _ MCDONALS/Captura-de-pantalla-2023-10-24-113039.png" alt="Imagen 1" class="w-100 h-100">
       </div>
       
       <section class="my-8">
