--- a/09.html
+++ b/09.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -40,40 +40,40 @@
 
         <div class="custom-slider">
           <div class="slide vertical active">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3829.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3829.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
-              <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/02torres_ssangyonng.png" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/02torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/03torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/03torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/05torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/05torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/06torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/06torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/08torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/08torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/09torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/09torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-              <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/10torres_ssangyonng.png" alt="Imagen Horizontal">
+              <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/10torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/12torres_ssangyonng.png" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/12torres_ssangyonng.png" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3878.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3878.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3885.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3885.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3897.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/09 TORRES _ SSANYONG/DSCF3897.jpg" alt="Imagen Horizontal">
           </div>
 
           
