--- a/10.html
+++ b/10.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -39,22 +39,22 @@
 
         <div class="custom-slider">
           <div class="slide horizontal active">
-            <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9106-Editar-3400K-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9106-Editar-3400K-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide vertical">
-              <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_7821-Editar-PNG-gigapixel-art-scale-0_30x.png" alt="Imagen Vertical">
+              <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_7821-Editar-PNG-gigapixel-art-scale-0_30x.png" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_8719-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_8719-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_8785-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_8785-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9449-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9449-Editar-gigapixel-art-scale-0_30x.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9511-Editar-3-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/10 ALLIANZ GO!/AAO_9511-Editar-3-gigapixel-art-scale-0_30x.jpg" alt="Imagen Horizontal">
           </div>
 
           
