--- a/12.html
+++ b/12.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio Pedro Triviño</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../../../../styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -42,35 +42,35 @@
 
         <div class="custom-slider">
           <div class="slide horizontal active">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-23.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-23.jpg" alt="Imagen Horizontal">
           </div>
           <div class="slide vertical">
-              <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-27.jpg" alt="Imagen Vertical">
+              <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-27.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-31.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-31.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-101.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-101.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000003-2.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000003-2.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000008.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000008.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000019.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000019.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide vertical">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000020.jpg" alt="Imagen Vertical">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000020.jpg" alt="Imagen Vertical">
           </div>
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-30.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/1-30.jpg" alt="Imagen Horizontal">
           </div>
           
           <div class="slide horizontal">
-            <img src="../proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000007-2.jpg" alt="Imagen Horizontal">
+            <img src="proyectos/FOTOS WEB/13 NUEVO RITMO _ MANSO_O/000007-2.jpg" alt="Imagen Horizontal">
           </div>
 
           
