--- a/about.html
+++ b/about.html
@@ -5,24 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pedro Triviño Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   
   <div class="h-screen d-flex flex-column">
-    <header class="h-20 p-4 d-flex justify-content-between align-items-center">
-      <div class="d-flex align-items-center">
-        <img src="../images/LOGO PRUEBA_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" width="200" height="50" class="me-4">
-      </div>
-      <nav>
-        <ul class="d-flex gap-4 text-4xl font-thin text-red-600">
-          <a href="index.html" class="text-decoration-none text-red-600">Work</a>
-          <a href="about.html" class="text-decoration-none text-red-600">About</a>
-          <a href="mailto:pedrotrivinofabro@gmail.com" class="text-decoration-none text-red-600">Contact</a>
-        </ul>
-      </nav>
-    </header>
 
+    <div id="header"></div>
+  
     <main class="flex-grow">
 
       <!-- <img src="../images/foto prueba fondo_Mesa de trabajo 1.png" alt="Imagen 1" class="w-100 h-100"> -->
@@ -60,16 +50,28 @@
       </section>
     </main>
 
-    <footer class="mt-8">
-      <div class="text-2xl mb-2">Contact:</div>
-      <div class="text-4xl mb-2">pedrotrivinofabro@gmail.com</div>
-      <div class="text-4xl mb-4">(+34) 679423753</div>
-      <div>Check:</div>
-      <div class="text-xl">(IG) (VMO) (LI) MAD/BCN/CDMX</div>
-      <div class="mt-4">
-        <img src="/placeholder.svg?height=50&width=50&text=Logo" alt="Footer Logo" width="50" height="50">
-      </div>
-    </footer>
+   <!-- Incluir el footer -->
+   <div id="footer"></div>
+    
+  </div>
+
+  <!-- Código JavaScript para manejar los eventos de hover y reproducir audio -->
+  <script>
+
+    // Función para cargar dinámicamente el contenido HTML
+    function loadHTML(elementId, filePath) {
+      fetch(filePath)
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById(elementId).innerHTML = data;
+        })
+        .catch(error => console.error('Error al cargar el archivo:', error));
+    }
+
+    // Cargar el encabezado y pie de página
+    loadHTML('header', 'header.html');
+    loadHTML('footer', 'footer.html');
+    </script>
 
   </div>
 </body>
