--- a/footer.html
+++ b/footer.html
@@ -1,13 +1,18 @@
-<head>
-  <link rel="stylesheet" href="../styles.css">
-</head>
-
 <footer>
-    <div class="foot1">Contact:</div>
-    <div class="foot2">pedrotrivinofabro@gmail.com</div>
-    <div class="foot2">(+34) 679423753</div>
-    <div class="foot2">Check:</div>
-    <div class="foot2">(IG) (VMO) (LI)</div>
-    <div class="foot2">MAD/BCN/CDMX</div>
+  <div class="foot1">Contact:</div>
+  <div class="foot2">
+      <a href="mailto:pedrotrivinofabro@gmail.com" title="Enviar un correo">pedrotrivinofabro@gmail.com</a>
+  </div>
+  <div class="foot2">
+      <a href="tel:+34679423753" title="Llamar">(+34) 679423753</a>
+  </div>
+  <div class="foot2">Check:</div>
+  <div class="foot2">
+      <a href="https://instagram.com/tu_usuario" target="_blank" title="Instagram">IG</a> 
+      <a href="https://vimeo.com/tu_usuario" target="_blank" title="Vimeo">VMO</a> 
+      <a href="https://linkedin.com/in/tu_usuario" target="_blank" title="LinkedIn">LI</a>
+  </div>
+  <div class="foot2">MAD/BCN/CDMX</div>
 </footer>
+
   
