--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <img src="images/LOGO_Mesa de trabajo 1.png" alt="Pedro Trivino Logo" class="logo">
     <img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="Pedro Trivino Logo" class="logo">
   </div>
-  <div class="header-font h-20">
+  <div class="header-font">
     <a href="index.html">WORK</a>
     <a href="about.html">ABOUT</a>
     <a href="mailto:pedrotrivinofabro@gmail.com">CONTACT</a>
