--- a/05.html
+++ b/05.html
@@ -61,15 +61,16 @@
         allowfullscreen></iframe>
     </div>
 
-    <main class="flex-grow">
+    <main >
       <section class="my-8">
-        <h2 class="text-4xl mb-4"> MAGIC PRO / HONOR</h2>
-        <h4>Direction for Honor</h4>
-        <p class="text-black mb-4">
+        <h4 class="h4-h4">Direction for:</h4>
+        <h2 class="h2-h2"> MAGIC PRO / HONOR</h2>
+        
+        <p class="p-p">
           Honor, a leading brand recognized for its dedication to innovation and relentless pursuit of excellence, takes center stage in an exciting advertisement that aims to inspire viewers to venture into a
           world brimming with opportunities and discoveries.
         </p>
-        <p class="text-black">
+        <p class="p-p">
           The Honor ad features an adventurous spirit using their Honor phone as their companion for exploration. Through breathtaking imagery, it showcases how the phone becomes an essential tool for
           capturing moments and overcoming challenges in any environment, relying on their Honor to accompany them on all their explorations.
         </p>
