--- a/footer.html
+++ b/footer.html
@@ -1,18 +1,21 @@
 <footer>
-  <div class="foot1">Contact:</div>
-  <div class="foot2">
-      <a href="mailto:pedrotrivinofabro@gmail.com" title="Enviar un correo">pedrotrivinofabro@gmail.com</a>
-  </div>
-  <div class="foot2">
-      <a href="tel:+34679423753" title="Llamar">(+34) 679423753</a>
-  </div>
-  <div class="foot2">Check:</div>
-  <div class="foot2">
-      <a href="https://instagram.com/tu_usuario" target="_blank" title="Instagram">IG</a> 
-      <a href="https://vimeo.com/tu_usuario" target="_blank" title="Vimeo">VMO</a> 
-      <a href="https://linkedin.com/in/tu_usuario" target="_blank" title="LinkedIn">LI</a>
-  </div>
-  <div class="foot2">MAD/BCN/CDMX</div>
+    <div class="foot1">Contact Us:</div> 
+    <div class="foot2">
+        <a href="mailto:pedrotrivinofabro@gmail.com" title="Enviar un correo">PEDROTRIVIÑOFABRO@GMAIL.COM</a>
+    </div>
+    <div class="foot2">
+        <a href="tel:+34679423753" title="Llamar">(+34) 679423753</a>
+    </div>
+    <div class="foot1">Check:</div>
+    <div class="foot2">
+        <a href="https://instagram.com/tu_usuario" target="_blank" title="Instagram">(IG)</a> 
+        <a href="https://vimeo.com/tu_usuario" target="_blank" title="Vimeo">(VMO)</a> 
+        <a href="https://linkedin.com/in/tu_usuario" target="_blank" title="LinkedIn">(LI)</a>
+    </div>
+    <div class="left-group foot3">
+        <div><img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="piojo"></div>
+        <div class="foot3">MAD/BCN/CDMX</div>
+    </div>
 </footer>
 
   
