--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </a>
         </div>
 
-        <div class="gallery-item">
+        <!-- <div class="gallery-item">
           <a href="04.html">
             <img src="gifs/04-PIXEL CAN PIZZA.gif" alt="Portfolio Image 4" id="gif4">
             <audio id="audio4" preload="auto">
@@ -57,7 +57,7 @@
               Your browser does not support the audio element.
             </audio>
           </a>
-        </div>
+        </div> -->
 
         <div class="gallery-item">
           <a href="05.html">
@@ -273,7 +273,7 @@
       { imgId: 'gif1', pixelSrc: 'gifs/01-PIXEL GIFF.gif', textSrc: 'gifs/01-NO PIXEL WALLAPOP.gif', audioId: 'audio1' },
       { imgId: 'gif2', pixelSrc: 'gifs/02-PIXEL KARONT.gif', textSrc: 'gifs/02-NO PIXEL KARONT.gif', audioId: 'audio2' },
       { imgId: 'gif3', pixelSrc: 'gifs/03-PIXEL XCELIRATE.gif', textSrc: 'gifs/03-NO PIXEL XCELIRATE.gif', audioId: 'audio3' },
-      { imgId: 'gif4', pixelSrc: 'gifs/04-PIXEL CAN PIZZA.gif', textSrc: 'gifs/04-NO PIXEL CAN PIZZA.gif', audioId: 'audio4' },
+      // { imgId: 'gif4', pixelSrc: 'gifs/04-PIXEL CAN PIZZA.gif', textSrc: 'gifs/04-NO PIXEL CAN PIZZA.gif', audioId: 'audio4' },
       { imgId: 'gif5', pixelSrc: 'gifs/05-PIXEL HONOR.gif', textSrc: 'gifs/05-NO PIXEL HONOR.gif', audioId: 'audio5' },
       { imgId: 'gif6', pixelSrc: 'gifs/06-PIXEL LUNAKI.gif', textSrc: 'gifs/06-NO PIXEL LUNAKI.gif', audioId: 'audio6' },
       { imgId: 'gif7', pixelSrc: 'gifs/07-PIXEL NUDE.gif', textSrc: 'gifs/07-NO PIXEL NUDE.gif', audioId: 'audio7' },
