--- a/footer.html
+++ b/footer.html
@@ -8,9 +8,9 @@
     </div>
     <div class="foot1">Check:</div>
     <div class="foot2">
-        <a href="https://instagram.com/tu_usuario" target="_blank" title="Instagram">(IG)</a> 
-        <a href="https://vimeo.com/tu_usuario" target="_blank" title="Vimeo">(VMO)</a> 
-        <a href="https://linkedin.com/in/tu_usuario" target="_blank" title="LinkedIn">(LI)</a>
+        <a href="https://www.instagram.com/pedrotrivinofabro/" target="_blank" title="Instagram">(IG)</a> 
+        <a href="https://vimeo.com/kinkifactory" target="_blank" title="Vimeo">(VMO)</a> 
+        <a href="https://www.linkedin.com/in/kinkifactory/?originalSubdomain=es" target="_blank" title="LinkedIn">(LI)</a>
     </div>
     <div class="left-group foot3">
         <div><img src="images/LOGO_Mesa de trabajo 1 copia.png" alt="piojo"></div>
