--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer>
-    <div class="foot1">Contact Us:</div> 
+    <div class="foot1">Contact:</div> 
     <div class="foot2">
-        <a href="mailto:pedrotrivinofabro@gmail.com" title="Enviar un correo">PEDROTRIVIÑOFABRO@GMAIL.COM</a>
+        <a href="mailto:kumocreativecollective@gmail.com" title="Enviar un correo">KUMOCREATIVECOLLECTIVE@GMAIL.COM</a>
     </div>
     <div class="foot2">
         <a href="tel:+34679423753" title="Llamar">(+34) 679423753</a>
