--- a/05.html
+++ b/05.html
@@ -99,8 +99,8 @@
       </div>
 
       <section class="my-8">
-        <h3 class="text-2xl mb-4">Credits:</h3>
-        <div class="credits-grid text-black">
+        <h4 class="h4-h4">Credits:</h4>
+        <div class="credits-grid">
           <div class="credit-column">
             <p>Production: Blua</p>
             <p>Agency: We are Social</p>
@@ -148,11 +148,11 @@
             <p>Driver Lighting: Alejandro</p>
             <p>Catering: Cuchara de Palo</p>
             <p>Casting:</p>
-            <ul>
-              <li>Swing Rope: Oscar Hernández</li>
-              <li>Boxe: Elisa Caballero</li>
-              <li>Desert: Ivan Luengo</li>
-            </ul>
+            <p>
+              Swing Rope: Oscar Hernández
+              Boxe: Elisa Caballero
+              Desert: Ivan Luengo
+            </p>
           </div>
         </div>
       </section>
